# libremodbus-rs

./: .gitmodules  Cargo.toml  README.md  build.rs
include/: mbconfig.h.in  port.h
src/: lib.rs
src/bindings/: mb_h_bindings.rs  mod.rs
src/port/: assert_func.rs  critical.rs  data_callbacks.rs  mod.rs  port_event.rs  port_serial.rs  port_timer.rs
src/rtu/: mod.rs
