[package]
authors = ["ololoshka2871"]
name = "libremodbus-rs"
version = "0.1.0"
edition = "2018"
build = "build.rs"

[dependencies]
embedded-hal = { version = "0.2.4", features = ["unproven"] }
fugit-timer = "0.1.3"
cortex-m = "0.7.3"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }

[dev-dependencies]

[features]
default = ["rtu"]
rtu = []
ascii = []