[package]
authors = ["main@nucleron.ru", "ololoshka2871"]
name = "libremodbus-rs"
version = "0.5.1"
edition = "2018"
build = "build.rs"
keywords = ["arm", "modbus"]
repository = "https://github.com/ololoshka2871/libremodbus-rs"

[dependencies]
embedded-hal = { version = "0.2.4", features = ["unproven"] }
fugit-timer = "0.1.3"
cortex-m = "0.7.3"

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }

[dev-dependencies]

[features]
default = ["rtu", "holdings", "inputs", "coils", "d_inputs"]
rtu = []
ascii = []
# tcp =[] todo
holdings = []
inputs = []
coils = []
d_inputs = []